Fix spacing

--- a/ui/components/CommentCard/styles.module.scss
+++ b/ui/components/CommentCard/styles.module.scss
@@ -1,3 +1,3 @@
 .card {
-  @apply p-3 rounded-md border border-neutral-300 bg-white;
+  @apply p-3 rounded-md border border-neutral-300 bg-white h-20;
 }
